LPS-144178 portal-language-lang: buildLang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -1982,7 +1982,6 @@ attribute-code=رمز السمة
 attribute-mapping=تعيين السمات
 attribute-mapping-help=أدخل تعيين السمات للسمات emailAddress و screenName و firstName و lastName و uuid بحيث يتم إدخال سمة واحدة <strong>لكل سطر</strong>.
 attributes=السمات
-attributes-description=سوف تؤثر هذه السمات على النتائج في هذه المعاينة ولن يتم حفظها مع تكوين المخطط الأولي.
 attributes-enabled=السمات الممكَّنة
 attributes-help=أدخل أسماء سمات بيان السمات <strong>لكل سطر</ strong> مضمنة في التوكيد.
 attributes-namespace-enabled=مساحة اسم السمات الممكَّنة
@@ -12893,6 +12892,8 @@ search-colon=البحث:
 search-container=حاوية البحث
 search-container-help=أساليب مساعد الوصول لاسترداد قيم حاوية البحث (على سبيل المثال، إجمالي عدد التنائج).
 search-content=إختر محتوى
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=قسائم البحث
 search-custom-range-date-format=يُرجى إدخال تاريخ بالتنسيق التالي: يوم-شهر-سنة
 search-custom-range-invalid-date-range=الرجاء إختيار نوع.
