--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Съпоставяне на атрибути (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Атрибути (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Разрешени атрибути (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Разрешено е пространство на имената на атрибути (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=търсене: (Automatic Translation)
 search-container=Търсене в контейнер (Automatic Translation)
 search-container-help=Достъп до помощни методи за извличане на стойности на контейнери за търсене (например общ брой резултати). (Automatic Translation)
 search-content=Избиране на съдържание
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Търсене на купони
 search-custom-range-date-format=Въведете дата в следния формат: ГГГГ-ММ-ДД (Automatic Translation)
 search-custom-range-invalid-date-range=Моля, изберете валиден тип.
