--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -1982,7 +1982,6 @@ attribute-code=Codi d'atribut
 attribute-mapping=Mapatge d'atributs
 attribute-mapping-help=Introduïu el mapatge d'atributs per als atributs emailAddress, screenName, firstName, lastName i uuid. Un atribut <strong>per línia</strong>.
 attributes=Atributs
-attributes-description=Aquests atributs només afectaran els resultats d'aquesta previsualització i no es desaran amb la configuració de pla tècnic.
 attributes-enabled=Atributs habilitats
 attributes-help=Introduïu declaració d'atribut noms d'atribut <strong>per line</strong> que estan inclosos a l'asserció.
 attributes-namespace-enabled=Espai de nom d'atributs habilitat
@@ -12895,6 +12894,8 @@ search-colon=Cerca:
 search-container=Cerca el contenidor
 search-container-help=Accediu als mètodes d'ajuda per recuperar els valors del contenidor de cerques (per exemple, el recompte total de resultats).
 search-content=Seleccioneu un contingut
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Cerca cupons
 search-custom-range-date-format=Introduïu una data en el següent format: YYYY-MM-DD
 search-custom-range-invalid-date-range=Seleccioneu un interval de dates vàlid.
