--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Mapování atributů (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=atributy (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Atributy povoleny (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Atributy obor názvů povoleny (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=hledání: (Automatic Translation)
 search-container=Kontejner hledání (Automatic Translation)
 search-container-help=Přístup k pomocných metodám pro načtení hodnot kontejneru vyhledávání (například celkový počet výsledků). (Automatic Translation)
 search-content=Vybrat obsah
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Hledat kupony
 search-custom-range-date-format=Zadejte prosím datum ve formátu: YYYY-MM-DD
 search-custom-range-invalid-date-range=Zvolte prosím platný typ.
