--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attributcode
 attribute-mapping=Attributzuordnung
 attribute-mapping-help=Geben Sie die Attributzuordnung für die Attribute emailAddress, screenName, firstName, lastName und uuid an. Ein Attribut <strong>pro Zeile</strong>.
 attributes=Attribute
-attributes-description=Diese Attribute wirken sich nur auf die Ergebnisse in dieser Vorschau aus und werden nicht mit der Blueprint-Konfiguration gespeichert.
 attributes-enabled=Attribute aktiviert
 attributes-help=Geben Sie einen Attributnamen <strong>pro Zeile</strong> an, die in die Assertion einbezogen werden sollen.
 attributes-namespace-enabled=Attributnamespace aktiviert
@@ -12895,6 +12894,8 @@ search-colon=Suche:
 search-container=Container durchsuchen
 search-container-help=Greifen Sie auf Hilfsmethoden zum Abrufen von Suchcontainerwerten zu (wie z. B. die Gesamtanzahl der Ergebnisse).
 search-content=Inhalt auswählen
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Gutscheine durchsuchen
 search-custom-range-date-format=Bitte geben Sie ein Datum in folgendem Format an: JJJJ-MM-TT
 search-custom-range-invalid-date-range=Bitte wählen Sie einen gültigen Datumsbereich.
