--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -1982,7 +1982,6 @@ attribute-code=Código de atributo
 attribute-mapping=Asignación de atributos
 attribute-mapping-help=Escriba la asignación de atributos para los atributos emailAddress, screenName, firstName, lastName y uuid. Un atributo <strong>por línea</strong>.
 attributes=Atributos
-attributes-description=Estos atributos solo afectarán a los resultados de esta vista previa (no se guardarán con la configuración del plano).
 attributes-enabled=Atributos habilitados
 attributes-help=Escriba los nombres de atributo de instrucción de atributo <strong>por línea</strong> que se incluyen en la aserción.
 attributes-namespace-enabled=Espacio de nombres de atributos habilitado
@@ -12895,6 +12894,8 @@ search-colon=Buscar:
 search-container=Contenedor de búsqueda
 search-container-help=Métodos del asistente de acceso para recuperar valores del contenedor de búsqueda (por ejemplo, número total de resultados).
 search-content=Seleccionar contenido
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Buscar cupones
 search-custom-range-date-format=Por favor, introduzca una fecha con formato: AAAA-MM-DD
 search-custom-range-invalid-date-range=Por favor, seleccione un rango de fechas válido.
