--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Atribuudi vastendamine (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Atribuudid (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Atribuudid lubatud (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Atribuutide nimeruum on lubatud (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=otsing: (Automatic Translation)
 search-container=Otsi konteinerist (Automatic Translation)
 search-container-help=Pääsete juurde spikrimeetoditele otsinguümbrise väärtuste toomiseks (nt tulemite koguarv). (Automatic Translation)
 search-content=Vali sisu
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Otsi kuponge
 search-custom-range-date-format=Sisestage kuupäev järgmises vormingus: AAAA-KK-PP (Automatic Translation)
 search-custom-range-invalid-date-range=Vali kehtiv tüüp.
