--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=نقشه برداری ویژگی (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=ویژگی (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=ویژگی های فعال (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=ویژگی های فضای نام فعال (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=جستجو:
 search-container=ظرف جستجو (Automatic Translation)
 search-container-help=روش های یاور دسترسی برای بازیابی مقادیر ظرف جستجو (به عنوان مثال، تعداد نتایج کل). (Automatic Translation)
 search-content=جستجو محتوا
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=جست‌و‌جوی کوپن
 search-custom-range-date-format=لطفا یک تاریخ با قالب زیر وارد کنید.: YYYY-MM-DD
 search-custom-range-invalid-date-range=لطفا یک نوع انتخاب کنید.
