--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -1982,7 +1982,6 @@ attribute-code=Määritekoodi
 attribute-mapping=Määritteiden Vastinmääritys
 attribute-mapping-help=Kirjoita määritteiden vastinmääritys määritteille sähköpostiOsoite, näyttöNimi, etunimi, sukunimi ja uuid. Yksi määrite <strong>per rivi</strong>.
 attributes=Määritteet
-attributes-description=Nämä määritteet vaikuttavat tuloksiin vain tässä esikatselussa, eikä niitä tallenneta blueprint-kokoonpanoon.
 attributes-enabled=Määritteet Käytössä
 attributes-help=Kirjoita ne määritteen ilmoituksen määritenimet <strong>riveittäin</strong>, jotka sisältyvät väitteeseen.
 attributes-namespace-enabled=Määritteiden Nimiavaruus Käytössä
@@ -12892,6 +12891,8 @@ search-colon=Haku:
 search-container=Hakukansio
 search-container-help=Käytä avustajametodeita saadaksesi haun sisältöarvoja (esimerkiksi tulosten kokonaismäärä).
 search-content=Valitse sisältö
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Hae kuponkeja
 search-custom-range-date-format=Ole hyvä ja anna päiväys, seuraavassa formaatissa: VVVV-KK-PP
 search-custom-range-invalid-date-range=Valitse kelvollinen päivämääräväli
