--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Mappage des attributs
 attribute-mapping-help=Saisissez un mappage d'attributs pour attributes emailAddress, screenName, firstName, lastName et uuid. Un attribut <strong>par ligne</strong>.
 attributes=Attributs
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Attributs activés
 attributes-help=Saisissez les déclarations d'attribut des noms d'attribut <strong>par ligne</strong> inclus dans l'assertion.
 attributes-namespace-enabled=Espace de nom des attributs activé
@@ -12893,6 +12892,8 @@ search-colon=Rechercher :
 search-container=Conteneur de recherche
 search-container-help=Accédez aux méthodes d'aide pour récupérer les valeurs du conteneur de recherche (par exemple, le nombre total de résultats).
 search-content=Rechercher des contenus
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Rechercher des bons
 search-custom-range-date-format=Veuillez entrer une date dans le format suivant : AAAA-MM-JJ
 search-custom-range-invalid-date-range=Veuillez choisir une plage de dates valide.
