--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribútum kódja
 attribute-mapping=Attribútum-hozzárendelés
 attribute-mapping-help=Adja meg az emailAddress, screenName, firstName, lastName és uuid attribútumok attribútum-hozzárendelését. <strong>Soronként egy</strong> attribútum.
 attributes=Attribútumok
-attributes-description=Ezek az attribútumok csak az előnézet találataira vannak hatással, nem lesznek elmentve a tervrajz konfigurációjában.
 attributes-enabled=Attribútumok engedélyezve
 attributes-help=Adja meg az attribútumkimutatás attribútumneveit <strong>soronként</strong>, amelyek szerepelnek a kimutatásban.
 attributes-namespace-enabled=Attribútumok névtere engedélyezve
@@ -12896,6 +12895,8 @@ search-colon=Keresés:
 search-container=Keresési tároló
 search-container-help=Segítő módszereket nyújt a keresési tároló értékeinek (például a találatok számának) beolvasásához.
 search-content=Tartalom keresése
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Kuponok keresése
 search-custom-range-date-format=Add meg a dátumot a következő formátumban: ÉÉÉÉ-HH-NN
 search-custom-range-invalid-date-range=Válassz eg yérvényes dátum tartományt.
