--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Pemetaan Atribut (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Atribut (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Atribut Difungsikan (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Ruang Nama Atribut Diaktifkan (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=mencari: (Automatic Translation)
 search-container=Kontainer Pencarian (Automatic Translation)
 search-container-help=Akses metode pembantu untuk mengambil nilai kontainer pencarian (misalnya, jumlah hasil total). (Automatic Translation)
 search-content=Pilih Konten
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Cari Kupon
 search-custom-range-date-format=Silakan masukkan tanggal dalam format berikut: YYYY-MM-DD (Automatic Translation)
 search-custom-range-invalid-date-range=Silakan pilih Jenis yang berlaku
