--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -1981,7 +1981,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Mapping attributi (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Attributi (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Attributi abilitati (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Spazio dei nomi attributi abilitato (Automatic Translation)
@@ -12894,6 +12893,8 @@ search-colon=Cerca:
 search-container=Contenitore di ricerca (Automatic Translation)
 search-container-help=Metodi di helper di Access per recuperare i valori del contenitore di ricerca, ad esempio il conteggio totale dei risultati. (Automatic Translation)
 search-content=Cerca Contenuto
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Ricerca Buoni Sconto
 search-custom-range-date-format=Inserisci la data nel seguente formato: AAAA-MM-GG
 search-custom-range-invalid-date-range=Seleziona un intervallo di date valido.
