--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=מיפוי תכונות
 attribute-mapping-help=הזן מיפוי תכונות עבור התכונות emailAddress, screenName, firstName, lastName ו-uuid. תכונה אחת <strong>לשורה</strong>.
 attributes=תכונות
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=תכונות זמינות
 attributes-help=הזן שמות תכונות במשפט תכונה <strong>לכל שורה</strong> הכלולים בקביעה.
 attributes-namespace-enabled=מרחב שמות של תכונות מופעל
@@ -12893,6 +12892,8 @@ search-colon=חפש:
 search-container=גורם מכיל של חיפוש (Automatic Translation)
 search-container-help=גש לפעולות שירות מסייעות לאחזור ערכי גורם מכיל של חיפוש (לדוגמה, ספירת תוצאות כוללת). (Automatic Translation)
 search-content=בחר תוכן
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=חפש תלושים
 search-custom-range-date-format=אנא הכנס תאריך במבנה הבא: YYYY-MM-DD
 search-custom-range-invalid-date-range=אנא בחר בסוג תקף.
