--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -1982,7 +1982,6 @@ attribute-code=属性コード
 attribute-mapping=属性マッピング
 attribute-mapping-help=emailAddress, screenName, firstName, lastName, uuidの属性マッピングを入力します。<strong>１行毎</strong>に属性を入力してください。
 attributes=属性
-attributes-description=これらの属性はこのプレビュー内の結果のみに影響し、ブループリント構成には保存されません。
 attributes-enabled=属性が有効です
 attributes-help=<strong>行ごとに</strong>アサーションに含まれる属性ステートメント名を入力してください。
 attributes-namespace-enabled=ネームスペース属性が有効です
@@ -12895,6 +12894,8 @@ search-colon=検索:
 search-container=検索コンテナ
 search-container-help=検索コンテナの値（合計結果数など）を取得するためのヘルパーメソッドにアクセスします。
 search-content=検索コンテンツ
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=クーポンの検索
 search-custom-range-date-format=日付を次のように入力してください：YYYY-MM-DD
 search-custom-range-invalid-date-range=正しい日付を入力してください。
