--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=특성 매핑 (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=특성 (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=사용 가능한 특성 (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=속성 네임스페이스 사용 (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=검색: (Automatic Translation)
 search-container=컨테이너 검색 (Automatic Translation)
 search-container-help=도우미 메서드에 액세스하여 검색 컨테이너 값(예: 총 결과 수)을 검색합니다. (Automatic Translation)
 search-content=내용을 선정하십시요
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=수색 쿠폰
 search-custom-range-date-format=YYYY-MM-DD: 다음 형식으로 날짜를 입력하십시오. (Automatic Translation)
 search-custom-range-invalid-date-range=유효한 유형을 선정하십시요.
