--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Atributų susiejimas (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Atributus (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Atributai įgalinti (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Įgalinta atributų vardų sritis (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=ieškoti: (Automatic Translation)
 search-container=Ieškos konteineris (Automatic Translation)
 search-container-help=Pasiekite pagalbininko metodus ieškos konteinerio reikšmėms nuskaityti (pvz., bendras rezultatų skaičius). (Automatic Translation)
 search-content=Ieškoti turinio (Automatic Translation)
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Paieškos kuponai (Automatic Translation)
 search-custom-range-date-format=Įveskite datą šiuo formatu: YYYY-MM-DD (Automatic Translation)
 search-custom-range-invalid-date-range=Pasirinkite tinkamą datų diapazoną. (Automatic Translation)
