--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Pemetaan Atribut (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Atribut (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Atribut Didayakan (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Atribut Ruang Nama Didayakan (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=Carian: (Automatic Translation)
 search-container=Bekas Gelintar (Automatic Translation)
 search-container-help=Akses kaedah pelonggar untuk mendapatkan nilai bekas carian (contohnya, jumlah kiraan hasil). (Automatic Translation)
 search-content=Gelintar Kandungan (Automatic Translation)
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Gelintar Kupon (Automatic Translation)
 search-custom-range-date-format=Sila masukkan tarikh dalam format berikut: YYY-MM-DD (Automatic Translation)
 search-custom-range-invalid-date-range=Sila pilih julat tarikh yang sah. (Automatic Translation)
