--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -1982,7 +1982,6 @@ attribute-code=Kenmerkcode
 attribute-mapping=Toewijzing kenmerk
 attribute-mapping-help=Voer attribuuttoewijzing in voor de attributen emailAddress, screenName, firstName, lastName en uuid. Een attribuut <strong>per lijn</strong>.
 attributes=Kenmerken
-attributes-description=Deze attributen zullen alleen van invloed zijn op de resultaten in dit voorbeeld en worden niet opgeslagen bij de configuratie van de blauwdruk.
 attributes-enabled=Kenmerken ingeschakeld
 attributes-help=Voer <strong>per lijn</strong> kenmerknamen in van kenmerkverklaringen die opgenomen zijn in de bewering.
 attributes-namespace-enabled=Naamruimte kenmerken ingeschakeld
@@ -12896,6 +12895,8 @@ search-colon=Zoeken:
 search-container=Zoekcontainer
 search-container-help=Gebruik hulpmethoden om zoekcontainerwaarden op te halen (bijvoorbeeld: totaal aantal resultaten).
 search-content=Content selecteren
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Kortingsbonnen zoeken
 search-custom-range-date-format=Voer een datum in met de volgende indeling: JJJJ-MM-DD
 search-custom-range-invalid-date-range=Selecteer een geldig datumbereik.
