--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Mapowanie atrybutów (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Atrybuty (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Atrybuty włączone (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Włączone atrybuty Obszaru nazw (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=Szukaj: (Automatic Translation)
 search-container=Kontener wyszukiwania (Automatic Translation)
 search-container-help=Dostęp do metod pomocnika w celu pobrania wartości kontenera wyszukiwania (na przykład całkowita liczba wyników). (Automatic Translation)
 search-content=Wybierz zawartość
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Szukaj kuponów
 search-custom-range-date-format=Wprowadź datę w formacie RRRR-MM-DD
 search-custom-range-invalid-date-range=Wybierz prawidłowy typ.
