--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -1982,7 +1982,6 @@ attribute-code=Código do atributo
 attribute-mapping=Mapeamento de Atributos
 attribute-mapping-help=Especifique o mapeamento de atributos para emailAddress, screenName, firstName, lastName e uuid. Um atributo <strong>por linha</strong>.
 attributes=Atributos
-attributes-description=Estes atributos só afetarão os resultados nesta visualização e não serão salvos com a configuração de blueprint.
 attributes-enabled=Atributos Habilitados
 attributes-help=Especifique um nome de atributo <strong>por linha</strong> para incluir na asserção.
 attributes-namespace-enabled=Namespace de Atributos Habilitado
@@ -12893,6 +12892,8 @@ search-colon=Busca:
 search-container=Contêiner de Pesquisa
 search-container-help=Acesse os métodos do assistente para recuperar os valores do contêiner de pesquisa (por exemplo, contagem de resultados total).
 search-content=Pesquisar Conteúdo
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Pesquisar Cupons
 search-custom-range-date-format=Por favor, insira a data no seguinte formato: AAAA-MM-DD
 search-custom-range-invalid-date-range=Por favor, selecione um intervalo válido.
