--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Mapeamento de atributos (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Atributos (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Atributos ativados (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Atributos Namespace Ativado (Automatic Translation)
@@ -12895,6 +12894,8 @@ search-colon=procurar: (Automatic Translation)
 search-container=Contêiner de pesquisa (Automatic Translation)
 search-container-help=Acesse métodos de auxiliares para recuperar valores do contêiner de pesquisa (por exemplo, contagem total de resultados). (Automatic Translation)
 search-content=Pesquisar Conteúdo
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Pesquisar Cupões
 search-custom-range-date-format=Por favor, insira a data no seguinte formato: AAAA-MM-DD
 search-custom-range-invalid-date-range=Por favor, selecione um intervalo de datas válido.
