--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Mapare atribute (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Atribute (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Atribute activate (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Spațiu de nume atribute activat (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=căutare: (Automatic Translation)
 search-container=Container de căutare (Automatic Translation)
 search-container-help=Accesați metodele de ajutor pentru a regăsi valorile containerului de căutare (de exemplu, numărul total de rezultate). (Automatic Translation)
 search-content=Selectare Continut
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Cauta Cupoate
 search-custom-range-date-format=Introduceți o dată în următorul format: YYYY-MM-DD (Automatic Translation)
 search-custom-range-invalid-date-range=Te rog selecteaza un tip valid.
