--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Отображение атрибутов (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Атрибуты (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Атрибуты Включено (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Атрибуты Именовое пространство Включено (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=искать: (Automatic Translation)
 search-container=Поиск контейнера (Automatic Translation)
 search-container-help=Методы справки доступа для получения значений контейнера поиска (например, общее количество результатов). (Automatic Translation)
 search-content=Выбрать содержимое
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Найти купоны
 search-custom-range-date-format=Пожалуйста, введите дату в следующем формате: ГГГГ-ММ-ДД
 search-custom-range-invalid-date-range=Пожалуйста, введите правильный диапазон дат.
