--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Priradenie atribútov (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Atribúty (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Povolené atribúty (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Atribúty Priestor názvov povolené (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=hľadať: (Automatic Translation)
 search-container=Kontajner vyhľadávania (Automatic Translation)
 search-container-help=Prístup k metódam pomocníka na načítanie hodnôt kontajnera vyhľadávania (napríklad celkový počet výsledkov). (Automatic Translation)
 search-content=Vybrať obsah
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Vyhľadávať v kupónoch
 search-custom-range-date-format=Zadajte, prosím, dátum vo formáte: YYYY-MM-DD
 search-custom-range-invalid-date-range=Vyberte, prosím, platný rozsah dátumov.
