--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Kartiranje atributov (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Atribute (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Atributi omogočeni (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Atributi Imenski prostor omogočen (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=iskanje: (Automatic Translation)
 search-container=Išči vsebnik (Automatic Translation)
 search-container-help=Za pridobivanje vrednosti iskalnega vsebnika (na primer skupno število rezultatov) dostopajte do pomoči. (Automatic Translation)
 search-content=Izberi vsebino
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Išči kupone
 search-custom-range-date-format=Vnesite datum v naslednji obliki: YYYY-MM-DD (Automatic Translation)
 search-custom-range-invalid-date-range=Izberite pravilen tip.
