--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attributkod
 attribute-mapping=Attributmappning
 attribute-mapping-help=Ange attributmappning för attributen emailAddress, screenName, firstName, lastName och uuid. Ett attribut <strong>per rad</strong>.
 attributes=Attribut
-attributes-description=Dessa attribut påverkar bara resultaten i den här förhandsgranskningen och kommer inte att sparas med skisskonfigurationen.
 attributes-enabled=Attribut aktiverat
 attributes-help=Ange namn för Attribute-uttryck <strong>per rad</strong> som inkluderas i kontrollen.
 attributes-namespace-enabled=Namnområde för attribut aktiverat
@@ -12893,6 +12892,8 @@ search-colon=Sök:
 search-container=Sök behållare
 search-container-help=Öppna hjälpmetoder för att hämta värden för Sök behållare (till exempel totalt antal resultat).
 search-content=Välj innehåll
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Sök kuponger
 search-custom-range-date-format=Ange ett datum i följande format: ÅÅÅÅ-MM-DD
 search-custom-range-invalid-date-range=Ange en giltig typ.
