--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Attribute Mapping (Automatic Copy)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Attributes (Automatic Copy)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Attributes Enabled (Automatic Copy)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Attributes Namespace Enabled (Automatic Copy)
@@ -12893,6 +12892,8 @@ search-colon=தேடு:
 search-container=Search Container (Automatic Copy)
 search-container-help=Access helper methods to retrieve search container values (for example, total results count). (Automatic Copy)
 search-content=நியுஸை தேடுக
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=கூப்பனை தேடுக
 search-custom-range-date-format=பின்வரும் வடிவத்தில் தேதியை உள்ளிடவும்: YYYY-MM-DD
 search-custom-range-invalid-date-range=செல்லுபடியாகும் தேதி வரம்பைத் தேர்ந்தெடுக்கவும்.
