--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=การแม็ปแอตทริบิวต์ (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=แอ ตทริ บิวต์ (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=เปิดใช้งานแอตทริบิวต์ (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=เปิดใช้งานแอตทริบิวต์ Namespace (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=ค้นหา:
 search-container=ค้นหาคอนเทนเนอร์ (Automatic Translation)
 search-container-help=เข้าถึงวิธีการของตัวช่วยเพื่อดึงค่าคอนเทนเนอร์การค้นหา (ตัวอย่างเช่น จํานวนผลลัพธ์ทั้งหมด) (Automatic Translation)
 search-content=ค้นหาเนื้อหา (Automatic Translation)
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=ค้นหาคูปอง (Automatic Translation)
 search-custom-range-date-format=โปรดใส่วันที่ในรูปแบบต่อไปนี้ YYYY-MM-DD (Automatic Translation)
 search-custom-range-invalid-date-range=โปรดเลือกช่วงวันที่ที่ถูกต้อง (Automatic Translation)
