--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Öznitelik Eşleme (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Öznitelik (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Etkin Öznitelikler (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Öznitelikler Ad Alanı Etkin (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=aramak: (Automatic Translation)
 search-container=Arama Kapsayıcısı (Automatic Translation)
 search-container-help=Arama kapsayıcısı değerlerini almak için yardımcı yöntemlere erişin (örneğin, toplam sonuç sayısı). (Automatic Translation)
 search-content=İçerik Seç
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Kuponları Ara
 search-custom-range-date-format=Lütfen aşağıdaki biçimde bir tarih girin: YYYY-MM-DD (Automatic Translation)
 search-custom-range-invalid-date-range=Lütfen bir tür seçin.
