--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Зіставлення атрибутів (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Атрибути (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Атрибути ввімкнуто (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Простір імен атрибутів увімкнуто (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=шукати: (Automatic Translation)
 search-container=Пошук контейнера (Automatic Translation)
 search-container-help=Доступ до методів помічників для отримання значень контейнерів пошуку (наприклад, загальна кількість результатів). (Automatic Translation)
 search-content=Вибрати вміст
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Знайти купони
 search-custom-range-date-format=Введіть дату в такому форматі: YYYY-MM-DD (Automatic Translation)
 search-custom-range-invalid-date-range=Будь ласка, виберіть правильний тип.
