--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Ánh xạ thuộc tính (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Thuộc tính (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Thuộc tính đã bật (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Thuộc tính Không gian tên Được bật (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=tìm kiếm: (Automatic Translation)
 search-container=Tìm kiếm Container (Automatic Translation)
 search-container-help=Truy cập các phương pháp trợ giúp để truy xuất các giá trị vùng chứa tìm kiếm (ví dụ: tổng số kết quả). (Automatic Translation)
 search-content=Chọn nội dung
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Tìm kiếm phiếu giảm giá
 search-custom-range-date-format=Bạn hãy nhập đúng định dạng ngày tháng : YYYY-MM-DD
 search-custom-range-invalid-date-range=Vui lòng loại hợp lệ.
