--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -1982,7 +1982,6 @@ attribute-code=特性代码
 attribute-mapping=特性映射
 attribute-mapping-help=为特性 emailAddress、screenName、firstName、lastName 和 uuid 输入特性映射。<strong>每行</strong>一个特性。
 attributes=特性
-attributes-description=这些特性将仅影响此预览中的结果，并且不会与蓝图配置一起保存。
 attributes-enabled=启用特性
 attributes-help=<strong>按行</strong>输入断言中包含的特语句特性名称。
 attributes-namespace-enabled=启用特性命名空间
@@ -12895,6 +12894,8 @@ search-colon=搜索：
 search-container=搜索容器
 search-container-help=访问 Helper 方法来检索搜索容器值（例如，总结果数）。
 search-content=选择内容
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=搜索优惠券
 search-custom-range-date-format=请按以下格式输入日期：年-月-日
 search-custom-range-invalid-date-range=请选择有效的日期范围。
