--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -1982,7 +1982,6 @@ attribute-code=屬性代碼
 attribute-mapping=屬性映射
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>.
 attributes=屬性
-attributes-description=這些屬性將只影響預覽結果，並不會儲存至藍圖配置。
 attributes-enabled=已啟用屬性
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion.
 attributes-namespace-enabled=Attributes Namespace Enabled
@@ -12894,6 +12893,8 @@ search-colon=搜尋：
 search-container=搜尋容器
 search-container-help=訪問 Helper 方法來檢索搜尋容器值 (例如，總結果數)。
 search-content=搜尋內容
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=搜尋優惠券
 search-custom-range-date-format=請輸入一個日期符合下列格式：YYYY-MM-DD
 search-custom-range-invalid-date-range=請選擇一個正確日期範圍。
