--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Αντιστοίχιση χαρακτηριστικών (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Χαρακτηριστικά (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Ενεργοποιημένα χαρακτηριστικά (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Ο χώρος ονομάτων των χαρακτηριστικών είναι ενεργοποιημένος (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=αναζήτηση: (Automatic Translation)
 search-container=Κοντέινερ αναζήτησης (Automatic Translation)
 search-container-help=Αποκτήστε πρόσβαση σε μεθόδους βοήθειας για την ανάκτηση τιμών κοντέινερ αναζήτησης (για παράδειγμα, συνολικός αριθμός αποτελεσμάτων). (Automatic Translation)
 search-content=Επιλογή περιεχομένου
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Αναζήτηση κουπονιών
 search-custom-range-date-format=Πληκτρολογήστε μια ημερομηνία με την ακόλουθη μορφή: YYY-MM-DD (Automatic Translation)
 search-custom-range-invalid-date-range=Παρακαλώ επιλέξτε έναν έγκυρο τύπο.
