--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=विशेषता मानचित्रण (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=विशेषताएँ (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=विशेषताएं सक्षम (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=विशेषताएं नामस्थान सक्षम (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=ढूँढ: (Automatic Translation)
 search-container=खोज कंटेनर (Automatic Translation)
 search-container-help=खोज कंटेनर मूल्यों को पुनः प्राप्त करने के लिए सहायक विधियों तक पहुंचें (उदाहरण के लिए, कुल परिणाम गिनती)। (Automatic Translation)
 search-content=कॉंटेंट चुनें
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=सर्च Coupons
 search-custom-range-date-format=कृपया निम्नलिखित प्रारूप में एक तारीख दर्ज करें: YYYY-MM-DD (Automatic Translation)
 search-custom-range-invalid-date-range=कृपया एक ठीक टाइप का चयन करें..
