--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Tilordning av attributter (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Attributter (Automatic Translation)
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 attributes-enabled=Attributter aktivert (Automatic Translation)
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion. (Automatic Copy)
 attributes-namespace-enabled=Navneområde for attributter aktivert (Automatic Translation)
@@ -12893,6 +12892,8 @@ search-colon=Søk:
 search-container=Søkebeholder (Automatic Translation)
 search-container-help=Få tilgang til hjelpermetoder for å hente søkebeholderverdier (for eksempel totalt antall resultater). (Automatic Translation)
 search-content=Velg innhold
+search-context-attributes=Search Context Attributes (Automatic Copy)
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration. (Automatic Copy)
 search-coupons=Søk kuponger
 search-custom-range-date-format=Vennligst angi en dato i formatet: ÅÅÅÅ-MM-DD
 search-custom-range-invalid-date-range=Vennligst angi et gyldig datointervall.
